Revert "Reformat Code"
This reverts commit e0f7dab34f0edfb85409bb230e79bd0f5f07f08a.